update outputRows() to handle OID values as long not int
git-svn-id: svn+ssh://developer.mitre.org/svnroot/giscore/trunk@1538 5c99b798-f2dd-11dd-9a12-8f84353f4b73